Crash when adjusting torus when edit mode is enabled for new objects #60410

Closed
opened 2019-01-11 02:01:33 +01:00 by Jay Edwards · 9 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce940 MX

Blender Version
Broken: 2.80, 80ffa73b3f, blender2.8, 2019-01-10
Worked: Yes

Short description of error
adjusting a torus in edit mode when edit mode for new objects is enabled causes an immediate crash

Exact steps for others to reproduce the error
if the option "enter edit mode for new objects" from the editing tab of the user preferences is enabled, go to your 3D veiw port add a torus, in the object context menu popup tweak any setting and it will result in an immediate crash.

**System Information** Operating system: Windows 10 Graphics card: NVIDIA GeForce940 MX **Blender Version** Broken: 2.80, 80ffa73b3f87, blender2.8, 2019-01-10 Worked: Yes **Short description of error** adjusting a torus in edit mode when edit mode for new objects is enabled causes an immediate crash **Exact steps for others to reproduce the error** if the option "enter edit mode for new objects" from the editing tab of the user preferences is enabled, go to your 3D veiw port add a torus, in the object context menu popup tweak any setting and it will result in an immediate crash.
Author

Added subscriber: @Jaye.Antoni_Whyldz

Added subscriber: @Jaye.Antoni_Whyldz

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

Confirmed.

Confirmed.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-01-11 09:38:57 +01:00
Member

Confirmed, checking...

Confirmed, checking...
Philipp Oeser removed their assignment 2019-01-14 12:24:39 +01:00
Campbell Barton was assigned by Philipp Oeser 2019-01-14 12:24:39 +01:00
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Crashes in undo:

1  mesh_undosys_step_decode           editmesh_undo.c      738  0x2068422 
2  undosys_step_decode                undo_system.c        176  0x2c2f108 
3  BKE_undosys_step_undo_with_data_ex undo_system.c        616  0x2c30988 
4  BKE_undosys_step_undo_with_data    undo_system.c        632  0x2c30abc 
5  ed_undo_step                       ed_undo.c            173  0x1cb549e 
6  ED_undo_pop_op                     ed_undo.c            266  0x1cb5887 
7  ED_undo_operator_repeat            ed_undo.c            435  0x1cb5deb 
8  ED_undo_operator_repeat_cb_evt     ed_undo.c            490  0x1cb6000 
9  ui_apply_but_funcs_after           interface_handlers.c 790  0x1f8cfdb 
10 ui_handler_region_menu             interface_handlers.c 9805 0x1fa4dd0 
11 wm_handler_ui_call                 wm_event_system.c    573  0x1c75423 
12 wm_handlers_do_intern              wm_event_system.c    2374 0x1c79c4a 
13 wm_handlers_do                     wm_event_system.c    2607 0x1c7a563 
14 wm_event_do_handlers               wm_event_system.c    2997 0x1c7b83c 
15 WM_main                            wm.c                 427  0x1c70ca9 
16 main                               creator.c            521  0x1c6b995 

Seems like the "first-create-empty-mesh-and-enter-editmode-workaround" of 4b859e91cb is not needed anymore because Undo was changed quite a lot?
[at least removing the workaround seems to work fine -- without the duplicated meshes mentioned in #25629]

However: doing so seems to leak memory instead:
Error: Not freed memory blocks: 2341, total unfreed memory 111.437531 MB

Not familiar enough with Undo, maybe @ideasman42 could take over?

Crashes in undo: ``` 1 mesh_undosys_step_decode editmesh_undo.c 738 0x2068422 2 undosys_step_decode undo_system.c 176 0x2c2f108 3 BKE_undosys_step_undo_with_data_ex undo_system.c 616 0x2c30988 4 BKE_undosys_step_undo_with_data undo_system.c 632 0x2c30abc 5 ed_undo_step ed_undo.c 173 0x1cb549e 6 ED_undo_pop_op ed_undo.c 266 0x1cb5887 7 ED_undo_operator_repeat ed_undo.c 435 0x1cb5deb 8 ED_undo_operator_repeat_cb_evt ed_undo.c 490 0x1cb6000 9 ui_apply_but_funcs_after interface_handlers.c 790 0x1f8cfdb 10 ui_handler_region_menu interface_handlers.c 9805 0x1fa4dd0 11 wm_handler_ui_call wm_event_system.c 573 0x1c75423 12 wm_handlers_do_intern wm_event_system.c 2374 0x1c79c4a 13 wm_handlers_do wm_event_system.c 2607 0x1c7a563 14 wm_event_do_handlers wm_event_system.c 2997 0x1c7b83c 15 WM_main wm.c 427 0x1c70ca9 16 main creator.c 521 0x1c6b995 ``` Seems like the "first-create-empty-mesh-and-enter-editmode-workaround" of 4b859e91cb is not needed anymore because Undo was changed quite a lot? [at least removing the workaround seems to work fine -- without the duplicated meshes mentioned in #25629] However: doing so seems to leak memory instead: `Error: Not freed memory blocks: 2341, total unfreed memory 111.437531 MB` Not familiar enough with Undo, maybe @ideasman42 could take over?

This issue was referenced by 0b9a65151d

This issue was referenced by 0b9a65151d9fc0c7e4ec273da7e4bcc3b09a6d18

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60410
No description provided.