Fix T60410: Crash adjusting torus w/ enter edit-mode preference